--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
+    <!-- <link rel="shortcut icon" href="assets/ico/favicon.png"> -->
 
     <title>Mateo Leal | Web designer and developer</title>
 
@@ -20,9 +20,9 @@
 	<script src="https://use.fontawesome.com/2daa1392a4.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js"></script>
+    <script src="assets/js/Chart.js"></script>
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script> -->
-	<script src="assets/js/modernizr.custom.js"></script>
+	<!-- <script src="assets/js/modernizr.custom.js"></script> -->
 	
 
 	
