i add a new section (skills) in the portafolio

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 		            <div class="collapse navbar-collapse" id="navbarCollapse">
 		                <ul class="nav navbar-nav navbar-right">
 		                    <li>
-		                        <a class="page-scroll menuItem" href="#about">About</a>
+		                        <a class="page-scroll menuItem" href="#skill">About</a>
 		                    </li>
 		                    <li>
-		                        <a class="page-scroll menuItem" href="#skill">Some Works</a>
+		                        <a class="page-scroll menuItem" href="#works">Some Works</a>
 		                    </li>
 		                    <li>
 		                        <a class="page-scroll menuItem" href="#contact">Contact</a>
@@ -63,33 +63,72 @@
 	</div>
 
 
+<!-- My Skill Section -->
 
-
-<!-- About me section -->
-<!-- 
-<section id="about">
-		<div class="container">
-			<div class="row" id="aboutRow">
-				<div class="col-sm-12 text-center">
-					<h2>About me</h2>
-					<hr class="primary">
-				</div>
-				<div class="col-sm-12 text-center" id="aboutText">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio atque dignissimos recusandae eligendi sit debitis illum quae nihil maiores eveniet minus, beatae ea perferendis magni ratione, labore quas necessitatibus soluta!</p>
-				</div>
-			</div>
-
-			</div>
-		</div>
-</section> -->
-
-<!-- Skill Section -->
 <section id="skill">
+	<div class="container-fluid">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 text-center" id="titleSkill">
+						<h3 class="titles">My Skills</h3>
+						<p>this is the things who i can do for you <3 </p>
+						<hr class="primary">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12" >
+							<ul id="menuSkills" >
+								<li class="description">
+											<span class="insideDiv active"><img src="img/icons/computer.svg" class="img-responsive"></span>
+											<span class="textMenu"><p>Design</p></span>
+								</li>
+
+								<li class="description">
+										<span class="insideDiv unactive"><img src="img/icons/database.svg" class="img-responsive"></span>
+										<span class="textMenu"><p>Database</p></span>
+								</li>
+
+								<li class="description">
+										<span class="insideDiv unactive"><img src="img/icons/file-code.svg" class="img-responsive"></span>
+										<span class="textMenu"><p>Backend</p></span>
+								</li>
+
+							</ul>
+					</div>
+				</div>
+				
+				<div class="row" id="design">
+					<div class="col-md-6" class="" id="left-skill"></div>
+					<div class="col-md-6" class="" id="skillRight">
+						<h3>My abilities as web developer</h3>
+						<br>
+						<ul>
+							<li>Experience of development methodologies</li>
+							<li>Ability to work independently and in mixed teams</li>
+							<li>Responsive web sites </li>
+							<li>Creativity </li>
+						</ul>
+					</p>
+					</div>
+				</div>
+
+			</div>
+
+	</div>
+</section>
+
+
+
+
+
+<!-- Works Section -->
+
+<section id="works">
 	<div class="container">
 		<div class="row">
 				<div class="col-md-12 text-center" >
-					<h2>My Projects</h3>
-					<hr id="primary">
+					<h3 class="titles">My Projects</h3>
+					<hr class="primary">
 				</div>
 		</div>
 
@@ -106,7 +145,7 @@
 					<div class="descWorks text-center">
 						<h3>Project Name</h3>
 						<p>Lorem ipsum dolor sit amet,fuga corporis harum sed vitae mollitia ipsum inventore nam perspiciatis dolorem.</p>
-						<button class="btn btn-round btn-fill"> Read more</button>
+						<button class="btns"> Read more</button>
 					</div>
 				</div>
 			</div>
@@ -119,7 +158,7 @@
 				<div class="descWorks text-center">
 					<h3>Project Name</h3>
 					<p>Lorem ipsum dolor sit amet,fuga corporis harum sed vitae mollitia ipsum inventore nam perspiciatis dolorem.</p>
-					<button class="btn btn-round btn-fill"> Read more</button>
+					<button class="btns"> Read more</button>
 				</div>
 			</div>
 		</div>
@@ -133,7 +172,7 @@
 				<div class="descWorks text-center">
 					<h3>Project Name</h3>
 					<p>Lorem ipsum dolor sit amet,fuga corporis harum sed vitae mollitia ipsum inventore nam perspiciatis dolorem.</p>
-					<button class="btn btn-round btn-fill"> Read more</button>
+					<button class="btns"> Read more</button>
 				</div>
 			</div>
 		</div>
