--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <!-- Main links  -->
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/fonts/style.css">
 
 
 <!-- Bootstrap links -->
@@ -51,13 +53,12 @@
 			<div class="row" id="bannerRow">
 				<div class="col-md-12 text-center" id="contenedorBanner">	
 					<div id="texto-2"><p>Hello There!, I'm Mateo</p></div>
-						<div class="texto">
-							<p class="main-text">DEVELOPER</p>
-								<ul id="animated-text">
+							<p class="main-text">full stack developer </p>
+								<!-- <ul id="animated-text">
 									<li class="main-text">FULL STACK</li>
 									<li class="main-text">& DESIGNER</li>
-								</ul>
-						</div>			
+								</ul> -->
+						
 			</div><!--- </col -->
 		</div>
 	</div>
@@ -78,26 +79,27 @@
 				<div class="row">
 					<div class="col-sm-12" >
 							<ul id="menuSkills" >
-								<li class="description">
-											<span class="insideDiv active"><img src="img/icons/computer.svg" class="img-responsive"></span>
+								<li class="description" id="sk1">
+											<span class="insideDiv active" id="c1"><img src="img/icons/computer.svg" class="img-responsive"></span>
 											<span class="textMenu"><p>Design</p></span>
 								</li>
 
-								<li class="description">
-										<span class="insideDiv unactive"><img src="img/icons/database.svg" class="img-responsive"></span>
+								<li class="description" id="sk2">
+										<span class="insideDiv unactive" id="c2"><img src="img/icons/database.svg" class="img-responsive"></span>
 										<span class="textMenu"><p>Database</p></span>
 								</li>
 
-								<li class="description">
-										<span class="insideDiv unactive"><img src="img/icons/file-code.svg" class="img-responsive"></span>
+								<li class="description" id="sk3">
+										<span class="insideDiv unactive" id="c3"><img src="img/icons/file-code.svg" class="img-responsive"></span>
 										<span class="textMenu"><p>Backend</p></span>
 								</li>
 
 							</ul>
 					</div>
 				</div>
-				
-				<div class="row" id="design">
+
+				<!-- Web Design  -->
+				<div class="row show" id="design">
 					<div class="col-md-6" class="" id="left-skill"></div>
 					<div class="col-md-6" class="" id="skillRight">
 						<h3>My abilities as web developer</h3>
@@ -108,15 +110,30 @@
 							<li>Responsive web sites </li>
 							<li>Creativity </li>
 						</ul>
-					</p>
 					</div>
 				</div>
 
-			</div>
+			<!-- Database -->
+
+				<div class="row none" id="database">
+						<div class="col-md-6" class="" id="left-database"></div>
+						<div class="col-md-6" class="" id="right-database">
+							<h3>My abilities as database developer</h3>
+							<br>
+							<ul>
+								<li>Experience of development methodologies</li>
+								<li>Ability to work independently and in mixed teams</li>
+								<li>Responsive web sites </li>
+								<li>Creativity </li>
+							</ul>
+						</div>
+				</div>
+
+
+		</div>
 
 	</div>
 </section>
-
 
 
 
@@ -188,12 +205,25 @@
 
 
 
-<footer>
+
+
+
+
+
+
+
+
+<!-- Footer -->
+<footer id="footer-reveal">
 	<div class="container">
 			<div class="row" id="footerRow">
-				<div class="col-sm-4"><p>Copyrights(c) 2017</p></div>
-				<div class="col-sm-4"><p>logo1</p><p>logo2</p><p>logo3</p></div>
-				<div class="col-sm-4"><p>Privacy Policy Terms of Use</p></p></div>
+				<div class="col-md-12 text-center">
+								<ul id="footer-section">
+									<li><a href=""><span class="icon-facebook"></span></a></li>
+									<li><a href=""><span class="icon-twitter"></span></a></li>
+									<li><a href=""><span class="icon-github"></span></a></li>
+								</ul>
+				</div>
 			</div>
 		</div>	
 
@@ -208,6 +238,9 @@
 <!-- Web Animation API link -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.2/web-animations.min.js"></script>
 <script src="js/animations/animaciones.js"></script>
+
+<!-- Footer reveal -->
+<script src="vendor/footerReveal/footerReveal.js"></script>
 
 
 </body>
