--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarCollapse">
 		                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
 		                </button>
-		                <a class="navbar-brand page-scroll" href="#page-top" id="">Logo Here</a>
+		                <a class="navbar-brand page-scroll" href="#page-top" id=""><span class="glyphicon glyphicon-option-horizontal"></span></a>
 		            </div>
 
 		            <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -77,7 +77,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-sm-12" >
+					<div class="col-sm-12 col-md-12 col-lg-12" >
 							<ul id="menuSkills" >
 								<li class="description" id="sk1">
 											<span class="insideDiv active" id="c1"><img src="img/icons/computer.svg" class="img-responsive"></span>
@@ -121,13 +121,29 @@
 							<h3>My abilities as database developer</h3>
 							<br>
 							<ul>
-								<li>Experience of development methodologies</li>
-								<li>Ability to work independently and in mixed teams</li>
-								<li>Responsive web sites </li>
-								<li>Creativity </li>
+								<li>Design stable, reliable and effective databases</li>
+								<li>Modify databases according to requests and perform tests</li>
+								<li>Solve database usage issues and malfunctions</li>
+								<li>Research and suggest new database products, services and protocols </li>
 							</ul>
 						</div>
 				</div>
+
+
+				<!-- Backend -->
+				<div class="row none" id="backend">
+						<div class="col-md-6" class="" id="left-database"></div>
+						<div class="col-md-6" class="" id="right-database">
+							<h3>My abilities as backend developer</h3>
+							<br>
+							<ul>
+								<li>Design stable, reliable and effective databases</li>
+								<li>Modify databases according to requests and perform tests</li>
+								<li>Solve database usage issues and malfunctions</li>
+								<li>Research and suggest new database products, services and protocols </li>
+							</ul>
+						</div>
+				</div>				
 
 
 		</div>
@@ -135,6 +151,18 @@
 	</div>
 </section>
 
+
+<section id="dCare">
+	<div class="container-fluid" id="dCare-container-fluid">
+		<div class="container" id="dCare-container">
+			<div class="row" id="dCare-row">
+				<div class="col-md-12 text-center">
+					<p>Are you interested?</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 
 
