last but not at least

--- a/index.html
+++ b/index.html
@@ -15,250 +15,243 @@
 </head>
 
 <body id="page-top">
+<div class="container-fluid" id="pageWrap">
+		<!-- Navigation bar -->
+		    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+		        <div class="container-fluid" id="navContainer">
+		        	<div class="container">
+				            <!-- Brand and toggle get grouped for better mobile display -->
+				            <div class="navbar-header">
+				                <a class="navbar-brand page-scroll" id="menuButton"><span class="glyphicon glyphicon-option-horizontal"></span></a>
+				            </div>
 
-<!-- Navigation bar -->
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid" id="navContainer">
-        	<div class="container">
-		            <!-- Brand and toggle get grouped for better mobile display -->
-		            <div class="navbar-header">
-		                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarCollapse">
-		                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-		                </button>
-		                <a class="navbar-brand page-scroll" href="#page-top" id=""><span class="glyphicon glyphicon-option-horizontal"></span></a>
-		            </div>
-
-		            <div class="collapse navbar-collapse" id="navbarCollapse">
-		                <ul class="nav navbar-nav navbar-right">
-		                    <li>
-		                        <a class="page-scroll menuItem" href="#skill">About</a>
-		                    </li>
-		                    <li>
-		                        <a class="page-scroll menuItem" href="#works">Some Works</a>
-		                    </li>
-		                    <li>
-		                        <a class="page-scroll menuItem" href="#contact">Contact</a>
-		                    </li>
-		                </ul>
-		            </div>
-		            <!-- /.navbar-collapse -->
-       		 </div>
-       </div>
-        <!-- /.container-fluid -->
-    </nav>
+				            <div class="collapse navbar-collapse" id="navbarCollapse">
+				                <ul class="nav navbar-nav navbar-right">
+				                    <li>
+				                        <a class="page-scroll menuItem" href="#skill">About</a>
+				                    </li>
+				                    <li>
+				                        <a class="page-scroll menuItem" href="#works">Some Works</a>
+				                    </li>
+				                    <li>
+				                        <a class="page-scroll menuItem" href="#contact">Contact</a>
+				                    </li>
+				                </ul>
+				            </div>
+				            <!-- /.navbar-collapse -->
+		       		 </div>
+		       </div>
+		        <!-- /.container-fluid -->
+		    </nav>
 
 
-<!-- Banner -->
-	<div class="container-fluid" id="bannerContainer">
-			<div class="row" id="bannerRow">
-				<div class="col-md-12 text-center" id="contenedorBanner">	
-					<div id="texto-2"><p>Hello There!, I'm Mateo</p></div>
-							<p class="main-text">full stack developer </p>
-								<!-- <ul id="animated-text">
-									<li class="main-text">FULL STACK</li>
-									<li class="main-text">& DESIGNER</li>
-								</ul> -->
-						
-			</div><!--- </col -->
-		</div>
-	</div>
+		<!-- Banner -->
+			<div class="container-fluid" id="bannerContainer">
+					<div class="row" id="bannerRow">
+						<div class="col-md-12 text-center" id="contenedorBanner">
+							<div id="texto-2"><p>Hello There!, I'm Mateo</p></div>
+									<p class="main-text">full stack developer </p>
+
+					</div><!--- </col -->
+				</div>
+			</div>
 
 
-<!-- My Skill Section -->
+		<!-- My Skill Section -->
 
-<section id="skill">
-	<div class="container-fluid">
+		<section id="skill">
+			<div class="container-fluid">
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-12 text-center" id="titleSkill">
+								<h3 class="titles">My Skills</h3>
+								<p>this is the things who i can do for you <3 </p>
+								<hr class="primary">
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-sm-12 col-md-12 col-lg-12" >
+									<ul id="menuSkills" >
+										<li class="description" id="sk1">
+													<span class="insideDiv active" id="c1"><img src="img/icons/computer.svg" class="img-responsive"></span>
+													<span class="textMenu"><p>Design</p></span>
+										</li>
+
+										<li class="description" id="sk2">
+												<span class="insideDiv unactive" id="c2"><img src="img/icons/database.svg" class="img-responsive"></span>
+												<span class="textMenu"><p>Database</p></span>
+										</li>
+
+										<li class="description" id="sk3">
+												<span class="insideDiv unactive" id="c3"><img src="img/icons/file-code.svg" class="img-responsive"></span>
+												<span class="textMenu"><p>Backend</p></span>
+										</li>
+
+									</ul>
+							</div>
+						</div>
+
+						<!-- Web Design  -->
+						<div class="row show" id="design">
+							<div class="col-md-6" class="" id="left-skill"></div>
+							<div class="col-md-6" class="" id="skillRight">
+
+								<br>
+								<ul>
+									<li>Experience of development methodologies</li>
+									<li>Ability to work independently and in mixed teams</li>
+									<li>Responsive web sites </li>
+									<li>Creativity </li>
+								</ul>
+							</div>
+						</div>
+
+					<!-- Database -->
+
+						<div class="row none" id="database">
+								<div class="col-md-6" class="" id="left-database"></div>
+								<div class="col-md-6" class="" id="right-database">
+
+									<br>
+									<ul>
+										<li>Design stable, reliable and effective databases</li>
+										<li>Modify databases according to requests and perform tests</li>
+										<li>Solve database usage issues and malfunctions</li>
+										<li>Research and suggest new database products, services and protocols </li>
+									</ul>
+								</div>
+						</div>
+
+
+						<!-- Backend -->
+						<div class="row none" id="backend">
+								<div class="col-md-6" class="" id="left-backend"></div>
+								<div class="col-md-6" class="" id="right-backend">
+
+									<br>
+									<ul>
+										<li>Design stable, reliable and effective databases</li>
+										<li>Modify databases according to requests and perform tests</li>
+										<li>Solve database usage issues and malfunctions</li>
+										<li>Research and suggest new database products, services and protocols </li>
+									</ul>
+								</div>
+						</div>
+
+
+				</div>
+
+			</div>
+		</section>
+
+
+		<!--    Extra information here   -->
+		<section id="extraInfo">
+			<div class="container-fluid" id="dCare-container-fluid">
+				<div class="container" id="dCare-container">
+					<div class="row" id="dCare-row">
+
+						<div class="col-md-12" id="inside">
+							<p id="quote">“The idea of waiting for something makes it more fascinating”</p>
+							<p id="author">– Andy Warhol</p>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</section>
+
+
+
+
+		<!-- Works Section -->
+
+		<section id="works">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-12 text-center" id="titleSkill">
-						<h3 class="titles">My Skills</h3>
-						<p>this is the things who i can do for you <3 </p>
-						<hr class="primary">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-12 col-md-12 col-lg-12" >
-							<ul id="menuSkills" >
-								<li class="description" id="sk1">
-											<span class="insideDiv active" id="c1"><img src="img/icons/computer.svg" class="img-responsive"></span>
-											<span class="textMenu"><p>Design</p></span>
-								</li>
-
-								<li class="description" id="sk2">
-										<span class="insideDiv unactive" id="c2"><img src="img/icons/database.svg" class="img-responsive"></span>
-										<span class="textMenu"><p>Database</p></span>
-								</li>
-
-								<li class="description" id="sk3">
-										<span class="insideDiv unactive" id="c3"><img src="img/icons/file-code.svg" class="img-responsive"></span>
-										<span class="textMenu"><p>Backend</p></span>
-								</li>
-
-							</ul>
-					</div>
-				</div>
-
-				<!-- Web Design  -->
-				<div class="row show" id="design">
-					<div class="col-md-6" class="" id="left-skill"></div>
-					<div class="col-md-6" class="" id="skillRight">
-						<h3>My abilities as web developer</h3>
-						<br>
-						<ul>
-							<li>Experience of development methodologies</li>
-							<li>Ability to work independently and in mixed teams</li>
-							<li>Responsive web sites </li>
-							<li>Creativity </li>
-						</ul>
-					</div>
-				</div>
-
-			<!-- Database -->
-
-				<div class="row none" id="database">
-						<div class="col-md-6" class="" id="left-database"></div>
-						<div class="col-md-6" class="" id="right-database">
-							<h3>My abilities as database developer</h3>
-							<br>
-							<ul>
-								<li>Design stable, reliable and effective databases</li>
-								<li>Modify databases according to requests and perform tests</li>
-								<li>Solve database usage issues and malfunctions</li>
-								<li>Research and suggest new database products, services and protocols </li>
-							</ul>
+						<div class="col-md-12 text-center" >
+							<h3 class="titles">My Projects</h3>
+							<hr class="primary">
 						</div>
 				</div>
 
 
-				<!-- Backend -->
-				<div class="row none" id="backend">
-						<div class="col-md-6" class="" id="left-database"></div>
-						<div class="col-md-6" class="" id="right-database">
-							<h3>My abilities as backend developer</h3>
-							<br>
-							<ul>
-								<li>Design stable, reliable and effective databases</li>
-								<li>Modify databases according to requests and perform tests</li>
-								<li>Solve database usage issues and malfunctions</li>
-								<li>Research and suggest new database products, services and protocols </li>
-							</ul>
+			<div class="container">
+				<div class="row ">
+							<!-- Remember only images 800x600px -->
+				<!-- 1st Item -->
+					<div class="col-md-4 col-sm-12">
+						<div class="worksContainer">
+							<div class="imgWorks">
+								<a href="#" class="img-class"><img class="img-responsive" src="img/about/1.jpg" alt=""></a>
+							</div>
+							<div class="descWorks text-center">
+								<h3>Project Name</h3>
+								<p>Lorem ipsum dolor sit amet,fuga corporis harum sed vitae mollitia ipsum inventore nam perspiciatis dolorem.</p>
+								<button class="btns"> Read more</button>
+							</div>
 						</div>
-				</div>				
-
-
-		</div>
-
-	</div>
-</section>
-
-
-<section id="dCare">
-	<div class="container-fluid" id="dCare-container-fluid">
-		<div class="container" id="dCare-container">
-			<div class="row" id="dCare-row">
-				<div class="col-md-12 text-center">
-					<p>Are you interested?</p>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-
-
-<!-- Works Section -->
-
-<section id="works">
-	<div class="container">
-		<div class="row">
-				<div class="col-md-12 text-center" >
-					<h3 class="titles">My Projects</h3>
-					<hr class="primary">
-				</div>
-		</div>
-
-
-	<div class="container">
-		<div class="row ">
-					<!-- Remember only images 800x600px -->
-		<!-- 1st Item -->
-			<div class="col-md-4 col-sm-12">
-				<div class="worksContainer">
-					<div class="imgWorks">
-						<a href="#" class="img-class"><img class="img-responsive" src="img/about/1.jpg" alt=""></a>
 					</div>
-					<div class="descWorks text-center">
-						<h3>Project Name</h3>
-						<p>Lorem ipsum dolor sit amet,fuga corporis harum sed vitae mollitia ipsum inventore nam perspiciatis dolorem.</p>
-						<button class="btns"> Read more</button>
+				<!-- 2st Item  -->
+				<div class="col-md-4 col-sm-12">
+					<div class="worksContainer">
+						<div class="imgWorks">
+							<a href="#" class="img-class"><img class="img-responsive" src="img/about/2.jpg" alt=""></a>
+						</div>
+						<div class="descWorks text-center">
+							<h3>Project Name</h3>
+							<p>Lorem ipsum dolor sit amet,fuga corporis harum sed vitae mollitia ipsum inventore nam perspiciatis dolorem.</p>
+							<button class="btns"> Read more</button>
+						</div>
 					</div>
 				</div>
-			</div>
-		<!-- 2st Item  -->
-		<div class="col-md-4 col-sm-12">
-			<div class="worksContainer">
-				<div class="imgWorks">
-					<a href="#" class="img-class"><img class="img-responsive" src="img/about/2.jpg" alt=""></a>
+
+				<!-- 3st Item -->
+				<div class="col-md-4 col-sm-12">
+					<div class="worksContainer">
+						<div class="imgWorks">
+							<a href="#" class="img-class"><img class="img-responsive" src="img/about/4.jpg" alt=""></a>
+						</div>
+						<div class="descWorks text-center">
+							<h3>Project Name</h3>
+							<p>Lorem ipsum dolor sit amet,fuga corporis harum sed vitae mollitia ipsum inventore nam perspiciatis dolorem.</p>
+							<button class="btns"> Read more</button>
+						</div>
+					</div>
 				</div>
-				<div class="descWorks text-center">
-					<h3>Project Name</h3>
-					<p>Lorem ipsum dolor sit amet,fuga corporis harum sed vitae mollitia ipsum inventore nam perspiciatis dolorem.</p>
-					<button class="btns"> Read more</button>
-				</div>
-			</div>
-		</div>
-		
-		<!-- 3st Item -->
-		<div class="col-md-4 col-sm-12">
-			<div class="worksContainer">
-				<div class="imgWorks">
-					<a href="#" class="img-class"><img class="img-responsive" src="img/about/4.jpg" alt=""></a>
-				</div>
-				<div class="descWorks text-center">
-					<h3>Project Name</h3>
-					<p>Lorem ipsum dolor sit amet,fuga corporis harum sed vitae mollitia ipsum inventore nam perspiciatis dolorem.</p>
-					<button class="btns"> Read more</button>
+
+
+
+
 				</div>
 			</div>
-		</div>
-	
-
-
-
-		</div>
-	</div>
-	</div>
-	
-</section>
-
-
-
-
-
-
-
-
-
-
-
-<!-- Footer -->
-<footer id="footer-reveal">
-	<div class="container">
-			<div class="row" id="footerRow">
-				<div class="col-md-12 text-center">
-								<ul id="footer-section">
-									<li><a href=""><span class="icon-facebook"></span></a></li>
-									<li><a href=""><span class="icon-twitter"></span></a></li>
-									<li><a href=""><span class="icon-github"></span></a></li>
-								</ul>
-				</div>
 			</div>
-		</div>	
 
-</footer>
+		</section>
+
+		<!-- Footer -->
+		<footer id="footer-reveal">
+			<div class="container">
+					<div class="row" id="footerRow">
+						<div class="col-md-12 text-center">
+										<ul id="footer-section">
+											<li><a href=""><span class="icon-facebook"></span></a></li>
+											<li><a href=""><span class="icon-twitter"></span></a></li>
+											<li><a href=""><span class="icon-github"></span></a></li>
+										</ul>
+						</div>
+					</div>
+				</div>
+
+		</footer>
+
+
+</div><!--/pageWrap-->
+
 <!-- Javascript links -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/settings.js"></script>
+<script src="js/navBar.js"></script>
 
 <!-- Bootstrap Script -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
