modificacion del footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body id="page-top">
-<div class="container-fluid" id="pageWrap">
+
 		<!-- Navigation bar -->
 		    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
 		        <div class="container-fluid" id="navContainer">
@@ -31,7 +31,7 @@
 				                        <a class="page-scroll menuItem" href="#skill">About</a>
 				                    </li>
 				                    <li>
-				                        <a class="page-scroll menuItem" href="#works">Some Works</a>
+				                        <a class="page-scroll menuItem" href="#works">Works</a>
 				                    </li>
 				                    <li>
 				                        <a class="page-scroll menuItem" href="#contact">Contact</a>
@@ -48,7 +48,7 @@
 		<!-- Banner -->
 			<div class="container-fluid" id="bannerContainer">
 					<div class="row" id="bannerRow">
-						<div class="col-md-12 text-center" id="contenedorBanner">
+						<div class="col-md-12 text-center animated fadeIn" id="contenedorBanner">
 							<div id="texto-2"><p>Hello There!, I'm Mateo</p></div>
 									<p class="main-text">full stack developer </p>
 
@@ -233,12 +233,21 @@
 		<footer id="footer-reveal">
 			<div class="container">
 					<div class="row" id="footerRow">
-						<div class="col-md-12 text-center">
-										<ul id="footer-section">
-											<li><a href=""><span class="icon-facebook"></span></a></li>
-											<li><a href=""><span class="icon-twitter"></span></a></li>
-											<li><a href=""><span class="icon-github"></span></a></li>
-										</ul>
+						<div class="col-md-4">
+						
+										
+						</div>
+						<div class="col-md-4 text-center ">
+							<ul id="footer-section">
+								<li><a href=""><span class="icon-facebook"></span></a></li>
+								<li><a href=""><span class="icon-twitter"></span></a></li>
+								<li><a href=""><span class="icon-github"></span></a></li>
+							</ul>
+						</div>
+
+						<div class="col-md-4 text-right" id="copy">
+							<p></p>
+							<p>&copy; 2017 all rights reserve</p>
 						</div>
 					</div>
 				</div>
@@ -246,7 +255,7 @@
 		</footer>
 
 
-</div><!--/pageWrap-->
+
 
 <!-- Javascript links -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
