--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				                        <a class="page-scroll menuItem" href="#works">Works</a>
 				                    </li>
 				                    <li>
-				                        <a class="page-scroll menuItem" href="#contact">Contact</a>
+				                        <a class="page-scroll menuItem" href="#footerSection">Contact</a>
 				                    </li>
 				                </ul>
 				            </div>
@@ -233,26 +233,26 @@
 		<footer id="footer-reveal">
 			<div class="container">
 					<div class="row" id="footerRow">
-						<div class="col-md-4">
-						
-										
+
+						<div class="col-md-12 text-center">
+
+								<ul id="footer-section">
+									<li id="uno"><a href=""><span class="icon-facebook"></span></a></li>
+									<li id="dos"><a href=""><span class="icon-twitter"></span></a></li>
+									<li id="tres"><a href=""><span class="icon-github"></span></a></li>
+								</ul>
+
 						</div>
-						<div class="col-md-4 text-center ">
-							<ul id="footer-section">
-								<li><a href=""><span class="icon-facebook"></span></a></li>
-								<li><a href=""><span class="icon-twitter"></span></a></li>
-								<li><a href=""><span class="icon-github"></span></a></li>
-							</ul>
+						<div class="col-md-12 text-center" id="copy">
+							<h3>&copy; 2017 all rights reserved</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi neque nobis, eveniet in tempore laboriosam praesentium quos ratione aliquid sit distinctio voluptatibus fugit aliquam ea enim dolor sequi libero, saepe voluptatem ad.</p>
 						</div>
 
-						<div class="col-md-4 text-right" id="copy">
-							<p></p>
-							<p>&copy; 2017 all rights reserve</p>
-						</div>
-					</div>
 				</div>
 
 		</footer>
+
+
 
 
 
@@ -268,6 +268,10 @@
 <!-- Web Animation API link -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.2/web-animations.min.js"></script>
 <script src="js/animations/animaciones.js"></script>
+
+<!--smoth scroll  -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
+<script type="text/javascript" src="js/agency.min.js"></script>
 
 <!-- Footer reveal -->
 <script src="vendor/footerReveal/footerReveal.js"></script>
