some bugs fixed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		        	<div class="container">
 				            <!-- Brand and toggle get grouped for better mobile display -->
 				            <div class="navbar-header">
-				                <a class="navbar-brand page-scroll" id="menuButton"><span class="glyphicon glyphicon-option-horizontal"></span></a>
+				                <a class="navbar-brand page-scroll" href="#bannerContainer" id="menuButton"><!-- <span class="glyphicon glyphicon-option-horizontal"></span> --></a>
 				            </div>
 
 				            <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -262,6 +262,7 @@
 
 <script src="js/settings.js"></script>
 <script src="js/navBar.js"></script>
+<script src="js/animations/smothScroll.js"></script>
 
 <!-- Bootstrap Script -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
