some colors changed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				                        <a class="page-scroll menuItem" href="#skill">About</a>
 				                    </li>
 				                    <li>
-				                        <a class="page-scroll menuItem" href="#works">Works</a>
+				                        <a class="page-scroll menuItem" href="#works">Portafolio</a>
 				                    </li>
 				                    <li>
 				                        <a class="page-scroll menuItem" href="#footerSection">Contact</a>
@@ -176,7 +176,7 @@
 			<div class="container">
 				<div class="row">
 						<div class="col-md-12 text-center" >
-							<h3 class="titles">My Projects</h3>
+							<h3 class="titles">Portafolio</h3>
 							<hr class="primary">
 						</div>
 				</div>
