modificacion del footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/fonts/style.css">
 
-
 <!-- Bootstrap links -->
 	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -14,10 +13,6 @@
 
 	<meta charset="UTF-8">
 	<title>Mateo Leal</title>
-
-
-
-
 </head>
 
 <body id="page-top">
@@ -236,44 +231,51 @@
 		</section>
 
 		<!-- Footer -->
-		<footer id="footer-reveal">
-			<div class="container">
+		
+			<div class="container-fluid" id="socialMedia">
 					<div class="row" id="footerRow">
-
 						<div class="col-md-12 text-center">
+								<!-- <p id="leyend">Follow Me </p> -->
 
-								<ul id="footer-section">
-									<li id="uno"><a href=""><span class="icon-facebook"></span></a></li>
-									<li id="dos"><a href=""><span class="icon-twitter"></span></a></li>
-									<li id="tres"><a href=""><span class="icon-github"></span></a></li>
+								<ul class="footer-section">
+									<li class="uno"><a href=""><span class="icon-facebook"></span></a></li>
+									<li class="dos"><a href=""><span class="icon-twitter"></span></a></li>
+									<li class="tres"><a href=""><span class="icon-github"></span></a></li>
 								</ul>
-
+									
+								<ul class="footer-section" id="fMenu">
+									<li><a href="">About</a></li>
+									<li><a href="">Portafolio</a></li>
+									<li><a href="">Contact</a></li>
+								</ul>
 						</div>
-						<div class="col-md-12 text-center" id="copy">
-							<h3>&copy; 2017 all rights reserved</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi neque nobis, eveniet in tempore laboriosam praesentium quos ratione aliquid sit distinctio voluptatibus fugit aliquam ea enim dolor sequi libero, saepe voluptatem ad.</p>
-						</div>
-
+					</div>
+			</div>
+		<footer id="footer-reveal">	
+		<div class="container-fluid">
+				<div class="col-md-12 text-center" id="copy">
+					<h3>&copy; 2017 Copyright: <span id="spanPage">mateoleal.com</span></h3>
 				</div>
-
+		</div>					
 		</footer>
 
 
-
-<script src="js/settings.js"></script>
-<script src="js/navBar.js"></script>
-<script src="js/animations/smothScroll.js"></script>
-
 <!-- Bootstrap Script -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
-<!-- Web Animation API link -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.2/web-animations.min.js"></script>
-<script src="js/animations/animaciones.js"></script>
+<!-- main js code -->
+	<script src="js/settings.js"></script>
+	<script src="js/navBar.js"></script>
+
+
+<!-- Animate css -->
+	<script src="js/animations/animaciones.js"></script>
 
 <!--smoth scroll  -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
-<script type="text/javascript" src="js/agency.min.js"></script>
+	<script type="text/javascript" src="js/agency.min.js"></script>
+<!-- easing effect -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
