se modificó la seccion de portafolio, ademas de terminar el footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<title>Mateo Leal</title>
 </head>
 
-<body id="page-top">
+<body id="">
 
 		<!-- Navigation bar -->
 		    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
@@ -66,7 +66,7 @@
 						<div class="row">
 							<div class="col-sm-12 text-center" id="titleSkill">
 								<h3 class="titles">My Skills</h3>
-								<p>this is the things who i can do for you <3 </p>
+								<p>this are the things who i can do for you <3 </p>
 								<hr class="primary">
 							</div>
 						</div>
@@ -175,57 +175,36 @@
 							<hr class="primary">
 						</div>
 				</div>
-
-
-			<div class="container">
-				<div class="row ">
-							<!-- Remember only images 800x600px -->
-				<!-- 1st Item -->
-					<div class="col-md-4 col-sm-12">
-						<div class="worksContainer">
-							<div class="imgWorks">
-								<a href="#" class="img-class"><img class="img-responsive" src="img/about/1.jpg" alt=""></a>
-							</div>
-							<div class="descWorks text-center">
-								<h3>Project Name</h3>
-								<p>Lorem ipsum dolor sit amet,fuga corporis harum sed vitae mollitia ipsum inventore nam perspiciatis dolorem.</p>
-								<button class="btns"> Read more</button>
-							</div>
-						</div>
-					</div>
-				<!-- 2st Item  -->
-				<div class="col-md-4 col-sm-12">
-					<div class="worksContainer">
-						<div class="imgWorks">
-							<a href="#" class="img-class"><img class="img-responsive" src="img/about/2.jpg" alt=""></a>
-						</div>
-						<div class="descWorks text-center">
-							<h3>Project Name</h3>
-							<p>Lorem ipsum dolor sit amet,fuga corporis harum sed vitae mollitia ipsum inventore nam perspiciatis dolorem.</p>
-							<button class="btns"> Read more</button>
-						</div>
-					</div>
-				</div>
-
-				<!-- 3st Item -->
-				<div class="col-md-4 col-sm-12">
-					<div class="worksContainer">
-						<div class="imgWorks">
-							<a href="#" class="img-class"><img class="img-responsive" src="img/about/4.jpg" alt=""></a>
-						</div>
-						<div class="descWorks text-center">
-							<h3>Project Name</h3>
-							<p>Lorem ipsum dolor sit amet,fuga corporis harum sed vitae mollitia ipsum inventore nam perspiciatis dolorem.</p>
-							<button class="btns"> Read more</button>
-						</div>
-					</div>
-				</div>
-
-
-
-
-				</div>
 			</div>
+			<div class="container">
+				<div class="row">
+
+
+					<div class="col-md-4 col-sm-12">
+						<div class="content text-center">
+							<img src="img/about/1.jpg" class="img-responsive">
+							<span class="btn">View more</span>
+						</div>
+					</div>
+
+					<div class="col-md-4 col-sm-12">
+						<div class="content text-center">
+							<img src="img/about/2.jpg" class="img-responsive">
+							<span class="btn">View more</span>
+						</div>
+					</div>
+
+					<div class="col-md-4 col-sm-12">
+						<div class="content text-center">
+							<img src="img/about/4.jpg" class="img-responsive">
+							<span class="btn">View more</span>
+						</div>
+					</div>
+
+
+
+			
+				</div>
 			</div>
 
 		</section>
@@ -235,18 +214,16 @@
 			<div class="container-fluid" id="socialMedia">
 					<div class="row" id="footerRow">
 						<div class="col-md-12 text-center">
-								<!-- <p id="leyend">Follow Me </p> -->
-
 								<ul class="footer-section">
-									<li class="uno"><a href=""><span class="icon-facebook"></span></a></li>
-									<li class="dos"><a href=""><span class="icon-twitter"></span></a></li>
-									<li class="tres"><a href=""><span class="icon-github"></span></a></li>
+									<li class="uno"><a href="#"><span class="icon-facebook"></span></a></li>
+									<li class="dos"><a href="#"><span class="icon-twitter"></span></a></li>
+									<li class="tres"><a href="#"><span class="icon-github"></span></a></li>
 								</ul>
 									
 								<ul class="footer-section" id="fMenu">
-									<li><a href="">About</a></li>
-									<li><a href="">Portafolio</a></li>
-									<li><a href="">Contact</a></li>
+									<li><a href="#skill" class="page-scroll">About</a></li>
+									<li><a href="#works" class="page-scroll">Portafolio</a></li>
+									<li><a href="#page-top" class="page-scroll">Home</a></li>
 								</ul>
 						</div>
 					</div>
@@ -254,7 +231,7 @@
 		<footer id="footer-reveal">	
 		<div class="container-fluid">
 				<div class="col-md-12 text-center" id="copy">
-					<h3>&copy; 2017 Copyright: <span id="spanPage">mateoleal.com</span></h3>
+					<h3>&copy; Mateo Leal. All Rights Reserved. 2017</h3>
 				</div>
 		</div>					
 		</footer>
