--- a/index.html
+++ b/index.html
@@ -1,260 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Main links  -->
+
+	<!-- Main links  -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/fonts/style.css">
 
-<!-- Bootstrap links -->
+	<!-- Bootstrap links -->
 	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="vendor/footerReveal/footerReveal.js"></script>
 
 	<meta charset="UTF-8">
-	<title>Mateo Leal</title>
+	<title>Mateo Leal  |  Full stack developer</title>
+	
 </head>
 
 <body id="page-top">
 
-		<!-- Navigation bar -->
-		    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-		        <div class="container-fluid" id="navContainer">
-		        	<div class="container">
-				            <!-- Brand and toggle get grouped for better mobile display -->
-				            <div class="navbar-header">
-				                <a class="navbar-brand page-scroll" href="#bannerContainer" id="menuButton"><!-- <span class="glyphicon glyphicon-option-horizontal"></span> --></a>
-				            </div>
-
-				            <div class="collapse navbar-collapse" id="navbarCollapse">
-				                <ul class="nav navbar-nav navbar-right">
-				                    <li>
-				                        <a class="page-scroll menuItem" href="#skill">About</a>
-				                    </li>
-				                    <li>
-				                        <a class="page-scroll menuItem" href="#works">Portfolio</a>
-				                    </li>
-				                    <li>
-				                        <a class="page-scroll menuItem" href="#socialMedia">Contact</a>
-				                    </li>
-				                </ul>
-				            </div>
-				            <!-- /.navbar-collapse -->
-		       		 </div>
-		       </div>
-		        <!-- /.container-fluid -->
-		    </nav>
-
-
-		<!-- Banner -->
-			<div class="container-fluid" id="bannerContainer">
-					<div class="row" id="bannerRow">
-						<div class="col-md-12 text-center animated fadeIn" id="contenedorBanner">
-							<div id="texto-2"><p>Hello There!, I'm Mateo</p></div>
-									<p class="main-text">full stack developer </p>
-
-					</div><!--- </col -->
+	<!-- Navigation bar -->
+	<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid" id="navContainer">
+			<div class="container">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<a class="navbar-brand page-scroll" href="#bannerContainer" id="menuButton"><!-- <span class="glyphicon glyphicon-option-horizontal"></span> --></a>
 				</div>
-			</div>
-
-
-		<!-- My Skill Section -->
-
-		<section id="skill">
-			<div class="container-fluid">
-					<div class="container">
-						<div class="row">
-							<div class="col-sm-12 text-center" id="titleSkill">
-								<h3 class="titles">My Skills</h3>
-								<p>this are the things who i can do for you <3 </p>
-								<hr class="primary">
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-sm-12 col-md-12 col-lg-12" >
-									<ul id="menuSkills" >
-										<li class="description" id="sk1">
-													<span class="insideDiv active" id="c1"><img src="img/icons/computer.svg" class="img-responsive"></span>
-													<span class="textMenu"><p>Front End</p></span>
-										</li>
-
-										<li class="description" id="sk3">
-												<span class="insideDiv unactive" id="c3"><img src="img/icons/file-code.svg" class="img-responsive"></span>
-												<span class="textMenu"><p>Backend</p></span>
-										</li>
-
-										<li class="description" id="sk2">
-												<span class="insideDiv unactive" id="c2"><img src="img/icons/database.svg" class="img-responsive"></span>
-												<span class="textMenu"><p>Database</p></span>
-										</li>
-
-								
-
-									</ul>
-							</div>
-						</div>
-
-						<!-- Web Design  -->
-						<div class="row show" id="design">
-							<div class="col-md-6" class="" id="left-skill"></div>
-							<div class="col-md-6" class="" id="skillRight">
-
-								<br>
-								<ul>
-									<li>Experience of development methodologies</li>
-									<li>Ability to work independently and in mixed teams</li>
-									<li>Responsive web sites </li>
-									<li>Creativity </li>
-								</ul>
-							</div>
-						</div>
-
-					<!-- Database -->
-
-						<div class="row none" id="database">
-								<div class="col-md-6" class="" id="left-database"></div>
-								<div class="col-md-6" class="" id="right-database">
-
-									<br>
-									<ul>
-										<li>Design stable, reliable and effective databases</li>
-										<li>Modify databases according to requests and perform tests</li>
-										<li>Solve database usage issues and malfunctions</li>
-										<li>Research and suggest new database products, services and protocols </li>
-									</ul>
-								</div>
-						</div>
-
-
-						<!-- Backend -->
-						<div class="row none" id="backend">
-								<div class="col-md-6" class="" id="left-backend"></div>
-								<div class="col-md-6" class="" id="right-backend">
-
-									<br>
-									<ul>
-										<li>Design stable, reliable and effective databases</li>
-										<li>Modify databases according to requests and perform tests</li>
-										<li>Solve database usage issues and malfunctions</li>
-										<li>Research and suggest new database products, services and protocols </li>
-									</ul>
-								</div>
-						</div>
-
-
+				<div class="collapse navbar-collapse" id="navbarCollapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a class="page-scroll menuItem" href="#skill">About</a></li>
+						<li><a class="page-scroll menuItem" href="#works">Portfolio</a></li>
+						<li><a class="page-scroll menuItem" href="#socialMedia">Contact</a></li>
+					</ul>
 				</div>
-
+				<!-- /.navbar-collapse -->
 			</div>
-		</section>
+		</div>
+		<!-- /.container-fluid -->
+	</nav>
 
+	<!-- Banner -->
+	<div class="container-fluid" id="bannerContainer">
+		<div class="row" id="bannerRow">
+			<div class="col-md-12 text-center animated fadeIn" id="contenedorBanner">
+				<div id="texto-2"><p>Hello There!, I'm Mateo</p></div>
+				<p class="main-text">full stack developer </p>
+			</div><!--- </col -->
+		</div>
+	</div>
 
-		<!--    Extra information here   -->
-		<section id="extraInfo">
-			<div class="container-fluid" id="dCare-container-fluid">
-				<div class="container" id="dCare-container">
-					<div class="row" id="dCare-row">
-
-						<div class="col-md-12" id="inside">
-							<p id="quote">“The idea of waiting for something makes it more fascinating”</p>
-							<p id="author">– Andy Warhol</p>
-						</div>
-
-					</div>
-				</div>
-			</div>
-		</section>
-
-
-
-
-		<!-- Works Section -->
-
-		<section id="works">
+	<!-- My Skill Section -->
+	<section id="skill">
+		<div class="container-fluid">
 			<div class="container">
 				<div class="row">
-						<div class="col-md-12 text-center" >
-							<h3 class="titles">My latest work</h3>
-							<p id="title-paragraph">Take a look at some of my recent projects.</p>
-							<hr class="primary">
-						</div>
+					<div class="col-sm-12 text-center" id="titleSkill">
+						<h3 class="titles">My Skills</h3>
+						<p>this are the things who i can do for you <3 </p>
+						<hr class="primary">
+					</div>
 				</div>
-			</div>
-			<div class="container">
 				<div class="row">
-
-					<div class="col-md-4 col-sm-12" id="contentWrap">
-						<div class="content text-center">
-							<img src="img/about/1.jpg" class="img-responsive">
-							<h3 class="project-name">Lorem ipsum.</h3>
-							<span class="btn">View more</span>
-						</div>
+					<div class="col-sm-12 col-md-12 col-lg-12" >
+						<ul id="menuSkills" >
+							<li class="description" id="sk1">
+								<span class="insideDiv active" id="c1"><img src="img/icons/computer.svg" class="img-responsive"></span>
+								<span class="textMenu"><p>Front End</p></span>
+							</li>
+							<li class="description" id="sk3">
+								<span class="insideDiv unactive" id="c3"><img src="img/icons/file-code.svg" class="img-responsive"></span>
+								<span class="textMenu"><p>Backend</p></span>
+							</li>
+							<li class="description" id="sk2">
+								<span class="insideDiv unactive" id="c2"><img src="img/icons/database.svg" class="img-responsive"></span>
+								<span class="textMenu"><p>Database</p></span>
+							</li>
+						</ul>
 					</div>
+				</div>
 
-					<div class="col-md-4 col-sm-12">
-						<div class="content text-center">
-							<img src="img/about/2.jpg" class="img-responsive">
-							<h3 class="project-name">Lorem ipsum.</h3>
-							<span class="btn">View more</span>
-						</div>
+				<!-- Web Design  -->
+				<div class="row show" id="design">
+					<div class="col-md-6" class="" id="left-skill"></div>
+					<div class="col-md-6" class="" id="skillRight">
+						<br>
+						<ul>
+							<li>Experience of development methodologies</li>
+							<li>Ability to work independently and in mixed teams</li>
+							<li>Responsive web sites </li>
+							<li>Creativity </li>
+						</ul>
 					</div>
+				</div>
 
-					<div class="col-md-4 col-sm-12">
-						<div class="content text-center">
-							<img src="img/about/4.jpg" class="img-responsive">
-							<h3 class="project-name">Lorem ipsum.</h3>
-							<span class="btn">View more</span>
-						</div>
+				<!-- Database -->
+				<div class="row none" id="database">
+					<div class="col-md-6" class="" id="left-database"></div>
+					<div class="col-md-6" class="" id="right-database">
+						<br>
+						<ul>
+							<li>Design stable, reliable and effective databases</li>
+							<li>Modify databases according to requests and perform tests</li>
+							<li>Solve database usage issues and malfunctions</li>
+							<li>Research and suggest new database products, services and protocols </li>
+						</ul>
 					</div>
+				</div>
 
+				<!-- Backend -->
+				<div class="row none" id="backend">
+					<div class="col-md-6" class="" id="left-backend"></div>
+					<div class="col-md-6" class="" id="right-backend">
+						<br>
+						<ul>
+							<li>Design stable, reliable and effective databases</li>
+							<li>Modify databases according to requests and perform tests</li>
+							<li>Solve database usage issues and malfunctions</li>
+							<li>Research and suggest new database products, services and protocols </li>
+						</ul>
+					</div>
 				</div>
 			</div>
-			</div>
+		</div>
+	</section>
 
-		</section>
-
-		<!-- Footer -->
-		
-			<div class="container-fluid" id="socialMedia">
-					<div class="row" id="footerRow">
-						<div class="col-md-12 text-center">
-								<ul class="footer-section">
-									<li class="uno"><a href="#"><span class="icon-facebook"></span></a></li>
-									<li class="dos"><a href="#"><span class="icon-twitter"></span></a></li>
-									<li class="tres"><a href="#"><span class="icon-github"></span></a></li>
-								</ul>
-									
-								<ul class="footer-section" id="fMenu">
-									<li><a href="#skill" class="page-scroll menuItem">About</a></li>
-									<li><a href="#works" class="page-scroll menuItem">Portfolio</a></li>
-									<li><a href="#page-top" class="page-scroll menuItem">Home</a></li>
-								</ul>
-						</div>
+	<!--    Extra information here   -->
+	<section id="extraInfo">
+		<div class="container-fluid" id="dCare-container-fluid">
+			<div class="container" id="dCare-container">
+				<div class="row" id="dCare-row">
+					<div class="col-md-12" id="inside">
+						<p id="quote">“The idea of waiting for something makes it more fascinating”</p>
+						<p id="author">– Andy Warhol</p>
 					</div>
+				</div>
 			</div>
-		<footer id="footer-reveal">	
-			<div class="container-fluid">
-					<div class="col-md-12 text-center" id="copy">
-						<h3>&copy; Mateo Leal. All Rights Reserved. 2017</h3>
+		</div>
+	</section>
+
+	<!-- Works Section -->
+	<section id="works">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 text-center" >
+					<h3 class="titles">My latest work</h3>
+					<p id="title-paragraph">Take a look at some of my recent projects.</p>
+					<hr class="primary">
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-sm-12" id="contentWrap">
+					<div class="content text-center">
+						<img src="img/about/1.jpg" class="img-responsive">
+						<h3 class="project-name">Lorem ipsum.</h3>
+						<span class="btn">View more</span>
 					</div>
-			</div>					
-		</footer>
+				</div>
+				<div class="col-md-4 col-sm-12">
+					<div class="content text-center">
+						<img src="img/about/2.jpg" class="img-responsive">
+						<h3 class="project-name">Lorem ipsum.</h3>
+						<span class="btn">View more</span>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-12">
+					<div class="content text-center">
+						<img src="img/about/4.jpg" class="img-responsive">
+						<h3 class="project-name">Lorem ipsum.</h3>
+						<span class="btn">View more</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
+	<!-- Footer -->
+	<div class="container-fluid" id="socialMedia">
+		<div class="row" id="footerRow">
+			<div class="col-md-12 text-center">
+				<ul class="footer-section">
+					<li class="uno"><a href="#"><span class="icon-facebook"></span></a></li>
+					<li class="dos"><a href="#"><span class="icon-twitter"></span></a></li>
+					<li class="tres"><a href="#"><span class="icon-github"></span></a></li>
+				</ul>
+				<ul class="footer-section" id="fMenu">
+					<li><a href="#skill" class="page-scroll menuItem">About</a></li>
+					<li><a href="#works" class="page-scroll menuItem">Portfolio</a></li>
+					<li><a href="#page-top" class="page-scroll menuItem">Home</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<footer id="footer-reveal">	
+		<div class="container-fluid">
+			<div class="col-md-12 text-center" id="copy">
+				<h3>&copy; Mateo Leal. All Rights Reserved. 2017</h3>
+			</div>
+		</div>					
+	</footer>
 
-<!-- Bootstrap Script -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-
-<!-- main js code -->
+	<!-- Bootstrap Script -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" 
+			integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" 
+			crossorigin="anonymous">
+	</script>
+	<!-- main js code -->
 	<script src="js/settings.js"></script>
 	<script src="js/navBar.js"></script>
-
-<!-- Animate css -->
+	<!-- Animate css -->
 	<script src="js/animations/animaciones.js"></script>
-
-<!--smoth scroll  -->
+	<!--smoth scroll  -->
 	<script type="text/javascript" src="js/agency.min.js"></script>
-<!-- easing effect -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
-
+	<!-- easing effect -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" 
+			integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" 
+			crossorigin="anonymous">
+	</script>
 
 </body>
 </html>
