improve the footer section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 						</ul>
 					</div>
 				</div>
+
 			</div>
 		</div>
 	</section>
@@ -140,37 +141,39 @@
 	</section>
 
 	<!-- Works Section -->
-	<section id="works">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 text-center" >
-					<h3 class="titles">My latest work</h3>
-					<p id="title-paragraph">Take a look at some of my recent projects.</p>
-					<hr class="primary">
+	<sectoin id="works">
+		<div class="container-fluid " style="background-color:  #F3F3F4; padding: 50px 0px; ">	
+			<div class="container" >
+				<div class="row">
+					<div class="col-md-12 text-center" >
+						<h3 class="titles">My latest work</h3>
+						<p id="title-paragraph">Take a look at some of my recent projects.</p>
+						<hr class="primary">
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4 col-sm-12" id="contentWrap">
-					<div class="content text-center">
-						<img src="img/about/1.jpg" class="img-responsive">
-						<h3 class="project-name">Lorem ipsum.</h3>
-						<span class="btn">View more</span>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 col-sm-12" id="contentWrap">
+						<div class="content text-center">
+							<img src="img/about/1.jpg" class="img-responsive">
+							<h3 class="project-name">Lorem ipsum.</h3>
+							<span class="btn">View more</span>
+						</div>
 					</div>
-				</div>
-				<div class="col-md-4 col-sm-12">
-					<div class="content text-center">
-						<img src="img/about/2.jpg" class="img-responsive">
-						<h3 class="project-name">Lorem ipsum.</h3>
-						<span class="btn">View more</span>
+					<div class="col-md-4 col-sm-12">
+						<div class="content text-center">
+							<img src="img/about/2.jpg" class="img-responsive">
+							<h3 class="project-name">Lorem ipsum.</h3>
+							<span class="btn">View more</span>
+						</div>
 					</div>
-				</div>
-				<div class="col-md-4 col-sm-12">
-					<div class="content text-center">
-						<img src="img/about/4.jpg" class="img-responsive">
-						<h3 class="project-name">Lorem ipsum.</h3>
-						<span class="btn">View more</span>
+					<div class="col-md-4 col-sm-12">
+						<div class="content text-center">
+							<img src="img/about/4.jpg" class="img-responsive">
+							<h3 class="project-name">Lorem ipsum.</h3>
+							<span class="btn">View more</span>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -178,29 +181,6 @@
 	</section>
 
 	<!-- Footer -->
-	<div class="container-fluid" id="socialMedia">
-		<div class="row" id="footerRow">
-			<div class="col-md-12 text-center">
-				<ul class="footer-section">
-					<li class="uno"><a href="#"><span class="icon-facebook"></span></a></li>
-					<li class="dos"><a href="#"><span class="icon-twitter"></span></a></li>
-					<li class="tres"><a href="#"><span class="icon-github"></span></a></li>
-				</ul>
-				<ul class="footer-section" id="fMenu">
-					<li><a href="#skill" class="page-scroll menuItem">About</a></li>
-					<li><a href="#works" class="page-scroll menuItem">Portfolio</a></li>
-					<li><a href="#page-top" class="page-scroll menuItem">Home</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<footer id="footer-reveal">	
-		<div class="container-fluid">
-			<div class="col-md-12 text-center" id="copy">
-				<h3>&copy; Mateo Leal. All Rights Reserved. 2017</h3>
-			</div>
-		</div>					
-	</footer>
 
 	<!-- Bootstrap Script -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" 
@@ -221,4 +201,29 @@
 	</script>
 
 </body>
+
+	<footer id="footer-reveal">		
+		<div class="container-fluid" id="socialMedia">
+			<div class="row" id="footerRow">
+				<div class="col-md-12 text-center">
+					<ul class="footer-section">
+						<li class="uno"><a href="#"><span class="icon-facebook"></span></a></li>
+						<li class="dos"><a href="#"><span class="icon-twitter"></span></a></li>
+						<li class="tres"><a href="#"><span class="icon-github"></span></a></li>
+					</ul>
+					<ul class="footer-section" id="fMenu">
+						<li><a href="#skill" class="page-scroll menuItem">About</a></li>
+						<li><a href="#works" class="page-scroll menuItem">Portfolio</a></li>
+						<li><a href="#page-top" class="page-scroll menuItem">Home</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		
+			<div class="container-fluid">
+				<div class="col-md-12 text-center" id="copy">
+					<h3>&copy; Mateo Leal. All Rights Reserved. 2017</h3>
+				</div>
+			</div>					
+		</footer>
 </html>
