--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<meta charset="UTF-8">
 	<title>Mateo Leal  |  Full stack developer</title>
-	
+
 </head>
 
 <body id="page-top">
@@ -142,49 +142,63 @@
 
 	<!-- Works Section -->
 	<sectoin id="works">
-		<div class="container-fluid " style="background-color:  #F3F3F4; padding: 50px 0px; ">	
-			<div class="container" >
-				<div class="row">
-					<div class="col-md-12 text-center" >
-						<h3 class="titles">My latest work</h3>
-						<p id="title-paragraph">Take a look at some of my recent projects.</p>
-						<hr class="primary">
-					</div>
-				</div>
-			</div>
+		<div class="container-fluid " style="background-color:  #F3F3F4; padding: 50px 0px; ">
 			<div class="container">
-				<div class="row">
-					<div class="col-md-4 col-sm-12" id="contentWrap">
-						<div class="content text-center">
-							<img src="img/about/1.jpg" class="img-responsive">
-							<h3 class="project-name">Lorem ipsum.</h3>
-							<span class="btn">View more</span>
+						<div class="row">
+							<div class="col-md-12 text-center" >
+								<h3 class="titles">My latest work</h3>
+								<p id="title-paragraph">Take a look at some of my recent projects.</p>
+								<hr class="primary">
+							</div>
 						</div>
 					</div>
-					<div class="col-md-4 col-sm-12">
-						<div class="content text-center">
-							<img src="img/about/2.jpg" class="img-responsive">
-							<h3 class="project-name">Lorem ipsum.</h3>
-							<span class="btn">View more</span>
+
+
+			<div class="container">
+
+					<div class="row">
+						<div class="col-md-4">
+							<div class="card content">
+									<img src="img/about/1.jpg" class="img-responsive">
+									<div class="title-paragraph text-center">
+										<h3>Lorem ipsum.</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit corporis minus itaque!</p>
+									</div>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="card content">
+									<img src="img/about/2.jpg" class="img-responsive">
+									<div class="title-paragraph text-center">
+										<h3>Lorem ipsum.</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit corporis minus itaque!</p>
+									</div>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="card content">
+									<img src="img/about/4.jpg" class="img-responsive">
+									<div class="title-paragraph text-center">
+										<h3>Lorem ipsum.</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit corporis minus itaque!</p>
+									</div>
+							</div>
+
 						</div>
 					</div>
-					<div class="col-md-4 col-sm-12">
-						<div class="content text-center">
-							<img src="img/about/4.jpg" class="img-responsive">
-							<h3 class="project-name">Lorem ipsum.</h3>
-							<span class="btn">View more</span>
-						</div>
-					</div>
-				</div>
+
 			</div>
+
 		</div>
 	</section>
 
 	<!-- Footer -->
 
 	<!-- Bootstrap Script -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" 
-			integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" 
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
+			integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
 			crossorigin="anonymous">
 	</script>
 	<!-- main js code -->
@@ -195,14 +209,14 @@
 	<!--smoth scroll  -->
 	<script type="text/javascript" src="js/agency.min.js"></script>
 	<!-- easing effect -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" 
-			integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"
+			integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb"
 			crossorigin="anonymous">
 	</script>
 
 </body>
 
-	<footer id="footer-reveal">		
+	<footer id="footer-reveal">
 		<div class="container-fluid" id="socialMedia">
 			<div class="row" id="footerRow">
 				<div class="col-md-12 text-center">
@@ -219,11 +233,11 @@
 				</div>
 			</div>
 		</div>
-		
+
 			<div class="container-fluid">
 				<div class="col-md-12 text-center" id="copy">
 					<h3>&copy; Mateo Leal. All Rights Reserved. 2017</h3>
 				</div>
-			</div>					
+			</div>
 		</footer>
 </html>
