--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 text-center" id="titleSkill">
-						<h3 class="titles">My Skills</h3>
+						<h3 class="titles"><a href=""></a> My Skills</h3>
 						<p>this are the things who i can do for you <3 </p>
 						<hr class="primary">
 					</div>
@@ -140,7 +140,7 @@
 		</div>
 	</section>
 
-	<!-- Works Section -->
+	<!-- Portfolio Section -->
 	<sectoin id="works">
 		<div class="container-fluid " style="background-color:  #F3F3F4; padding: 50px 0px; ">
 			<div class="container">
@@ -163,6 +163,7 @@
 									<div class="title-paragraph text-center">
 										<h3>Lorem ipsum.</h3>
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit corporis minus itaque!</p>
+										<button class="btn">view more</button>
 									</div>
 							</div>
 						</div>
@@ -173,6 +174,7 @@
 									<div class="title-paragraph text-center">
 										<h3>Lorem ipsum.</h3>
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit corporis minus itaque!</p>
+										<button class="btn">view more</button>
 									</div>
 							</div>
 						</div>
@@ -183,6 +185,7 @@
 									<div class="title-paragraph text-center">
 										<h3>Lorem ipsum.</h3>
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit corporis minus itaque!</p>
+										<button class="btn">view more</button>
 									</div>
 							</div>
 
@@ -195,26 +198,6 @@
 	</section>
 
 	<!-- Footer -->
-
-	<!-- Bootstrap Script -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
-			integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-			crossorigin="anonymous">
-	</script>
-	<!-- main js code -->
-	<script src="js/settings.js"></script>
-	<script src="js/navBar.js"></script>
-	<!-- Animate css -->
-	<script src="js/animations/animaciones.js"></script>
-	<!--smoth scroll  -->
-	<script type="text/javascript" src="js/agency.min.js"></script>
-	<!-- easing effect -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"
-			integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb"
-			crossorigin="anonymous">
-	</script>
-
-</body>
 
 	<footer id="footer-reveal">
 		<div class="container-fluid" id="socialMedia">
@@ -240,4 +223,24 @@
 				</div>
 			</div>
 		</footer>
+
+	<!-- Bootstrap Script -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
+			integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+			crossorigin="anonymous">
+	</script>
+	<!-- main js code -->
+	<script src="js/settings.js"></script>
+	<script src="js/navBar.js"></script>
+	<!-- Animate css -->
+	<script src="js/animations/animaciones.js"></script>
+	<!--smoth scroll  -->
+	<script type="text/javascript" src="js/agency.min.js"></script>
+	<!-- easing effect -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"
+			integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb"
+			crossorigin="anonymous">
+	</script>
+
+</body>
 </html>
